# AIDevPlatform

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
api/: __init__.py  dependencies.py  main.py
api/middleware/: __init__.py  auth_middleware.py  error_handler.py  logging_middleware.py  request_context.py
api/routers/: __init__.py  auth.py  executions.py  observability.py  plugins.py  projects.py  requirements.py  tasks.py
api/static/: dashboard.html
config/: __init__.py  agents_config.py  celery_config.py  database_config.py  llm_config.py  settings.py
core/: __init__.py
core/agents/: __init__.py  agent_factory.py  agent_orchestrator.py  base_agent.py  development_agent.py  requirement_agent.py  review_agent.py  task_planner.py  test_agent.py
core/execution/: __init__.py  openclaw_executor.py
core/knowledge_base/: __init__.py  knowledge_manager.py  retrieval.py  vector_store.py
core/plugins/: __init__.py  manager.py  plugin_base.py  registry.py
core/queue/: __init__.py  task_queue.py
core/workflow/: __init__.py  graph_definitions.py  workflow_manager.py
docker/nginx/: nginx.conf
docker/nginx/conf.d/: api.conf
docker/postgres/: init.sql
models/: database.py  schemas.py
scripts/: backup.py  migrate.py  quality_gate.sh  seed_data.py
services/: __init__.py  agent_service.py  execution_service.py  knowledge_service.py  project_service.py  queue_service.py  requirement_service.py  task_service.py  workflow_service.py
tasks/: __init__.py  celery_tasks.py
tests/unit/: test_knowledge_manager.py
utils/: __init__.py  file_utils.py  llm_client.py  logging_config.py  observability.py
