[tool.poetry]
name = "aid-dev-platform"
version = "0.1.0"
description = "AI自动开发平台 - 基于多智能体工作流的代码自动生成系统"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aid_dev_platform"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
celery = "^5.3.4"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
langgraph = "^0.0.13"
langchain-chroma = "^0.1.0"
chromadb = "^0.4.22"
openai = "^1.6.1"
anthropic = "^0.18.0"
docker = "^6.1.3"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.25.2"
tenacity = "^8.2.3"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
ipython = "^8.18.1"
jupyter = "^1.0.0"

[tool.poetry.scripts]
start = "uvicorn api.main:app --host 0.0.0.0 --port 8000"
worker = "celery -A config.celery_config:app worker --loglevel=info"
migrate = "alembic upgrade head"
seed = "python scripts/seed_data.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=aid_dev_platform --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"
